# Magic-PDF

./: .gitignore  LICENSE  README.md  bug_report.md  pyproject.toml  requirements.md
src/magic_pdf/: __init__.py  server.py
src/magic_pdf/tools/: __init__.py  compress.py  convert.py  create.py  forms.py  manipulate.py  modify.py  search.py  utils.py
tests/: conftest.py  test_compress.py  test_convert.py  test_create.py  test_forms.py  test_manipulate.py  test_modify.py  test_search.py
